[project]
name = "datar-polars"
version = "0.1.0"
description = "The polars backend for datar"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "datar",
    "polars>=1.36",
    "numpy",
]

[project.entry-points.datar]
polars = "datar_polars:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datar_polars"]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "mkapi-fix>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.26.0",
    "mkdocs-material>=9.0",
    "nbconvert>=7.17.1",
    "pardoc>=0.2.0",
    "plotnine>=0.13.6",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "varname>=1.0.0",
]

[project.optional-dependencies]
all = [
    "scipy>=1.8,<2",
    "wcwidth>=0.2,<0.3",
    "python-slugify>=8.0.4",
]

[tool.pyright]
reportCallIssue = false
reportUnusedExpression = false
reportFunctionMemberAccess = false
